--- a/addon/locale/ar/LC_MESSAGES/nvda.po
+++ b/addon/locale/ar/LC_MESSAGES/nvda.po
@@ -5,104 +5,96 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 'dictionariesAlmaany' '2.3'\n"
-"Report-Msgid-Bugs-To: 'nvda-translations@freelists.org'\n"
-"POT-Creation-Date: 2021-03-07 20:00+0200\n"
-"PO-Revision-Date: 2021-03-08 17:39+0200\n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"Project-Id-Version: 'contextualTranslator' '0.2'\n"
+"Report-Msgid-Bugs-To: 'nvda-translations@groups.io'\n"
+"POT-Creation-Date: 2021-12-17 01:12+0200\n"
+"PO-Revision-Date: 2021-12-17 01:43+0200\n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=6; plural=(n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n"
+"%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5);\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "X-Generator: Poedit 2.0.7\n"
-"Plural-Forms: nplurals=6; plural=(n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && "
-"n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5);\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 
+#. Translators: Category in input gestures dialog.
 #. Translators: title of the dialog
-#: addon\globalPlugins\DictionariesAlmaany\__init__.py:27
-#: addon\globalPlugins\DictionariesAlmaany\__init__.py:77
-#: addon\globalPlugins\DictionariesAlmaany\myDialog.py:38
-msgid "Dictionaries Almaany"
-msgstr "قواميس المَعاني"
+#. Translators: Title of dialog.
+#. Add-on summary, usually the user visible name of the addon.
+#. Translators: Summary for this add-on
+#. to be shown on installation and add-on information found in Add-ons Manager.
+#: addon\globalPlugins\contextualTranslator\__init__.py:31
+#: addon\globalPlugins\contextualTranslator\__init__.py:61
+#: addon\globalPlugins\contextualTranslator\myDialog.py:69 buildVars.py:23
+msgid "Contextual Translator"
+msgstr "المترْجِم السياقي"
 
-#. Translators: label of Dictionaries Almaany setting menu in preferences menu
-#: addon\globalPlugins\DictionariesAlmaany\__init__.py:38
-msgid "&Dictionaries Almaany..."
-msgstr "قواميس المَعاني"
-
-#: addon\globalPlugins\DictionariesAlmaany\__init__.py:67
-msgid "Opens DictionariesAlmaany dialog to get meaning of words."
-msgstr "فتح محاورةْ قواميس المعاني, للحصول على معنى الكلمة"
+#. Translators: Message displayed in input help mode.
+#: addon\globalPlugins\contextualTranslator\__init__.py:43
+msgid "Opens Contextual Translator dialog to get meaning of words."
+msgstr "فتح محاورةْ المترْجِم السياقي للحصول على معنى الكلمات."
 
 #. Translators: Type of windows to display translation result.
-#: addon\globalPlugins\DictionariesAlmaany\__init__.py:83
+#: addon\globalPlugins\contextualTranslator\__init__.py:67
 msgid "Default full browser"
 msgstr "المتصفح الإفتراضي العادي"
 
-#: addon\globalPlugins\DictionariesAlmaany\__init__.py:83
+#: addon\globalPlugins\contextualTranslator\__init__.py:67
 msgid "Browser window only"
-msgstr "نافذةْ المتصفح فقط"
+msgstr "فقط نافذةْ المتصفح"
 
-#: addon\globalPlugins\DictionariesAlmaany\__init__.py:83
+#: addon\globalPlugins\contextualTranslator\__init__.py:67
 msgid "NVDA browseable message box(choose it after testing)"
-msgstr "نافذةْ NVDA browseable message box(مِن الأفضل تجربتها قبل الإختيار)"
+msgstr "نافذةْ NVDA للتصفح(قُم باختيارها بعد التجربة)"
 
 #. Translators: label of cumbo box to choose type of window to display result.
-#: addon\globalPlugins\DictionariesAlmaany\__init__.py:86
+#: addon\globalPlugins\contextualTranslator\__init__.py:70
 msgid "Choose type of window To Display Result:"
-msgstr "اختيار نافذةْ النتائج:"
+msgstr "اختر  نوع النافذة لإظهار النتيجة:"
 
 #. Translators: label of the check box
-#: addon\globalPlugins\DictionariesAlmaany\__init__.py:91
-msgid "&Close Dictionaries Almaany Dialog after requiring translation"
-msgstr "إغلاق محاورةْ قواميس المَعاني بعد طلب معنى الكلمة"
+#: addon\globalPlugins\contextualTranslator\__init__.py:75
+msgid "Close Contextual Translator Dialog after requesting translation"
+msgstr "إغلاق محاورةْ المترْجِم السياقي بعد طلب الترجمة"
 
-#: addon\globalPlugins\DictionariesAlmaany\myDialog.py:74
-msgid "Enter a word please"
-msgstr "أَدْخِل كلمة فضلا"
+#: addon\globalPlugins\contextualTranslator\myDialog.py:37
+msgid "Contextual Translation"
+msgstr "الترجمة السياقية"
 
-#: addon\globalPlugins\DictionariesAlmaany\myDialog.py:81
+#. Translators: Label of text control.
+#: addon\globalPlugins\contextualTranslator\myDialog.py:78
+msgid "Enter a word or a phrase"
+msgstr "أَدخِلْ عبارة أو كلمة"
+
+#. Translators: Label of cumbo box to choose a dictionary.
+#: addon\globalPlugins\contextualTranslator\myDialog.py:86
 msgid "Choose Dictionary"
-msgstr "إختر القاموس"
+msgstr "اخترْ القاموس"
 
-#: addon\globalPlugins\DictionariesAlmaany\myDialog.py:87
+#. Translators: Label of OK button.
+#: addon\globalPlugins\contextualTranslator\myDialog.py:93
 msgid "OK"
 msgstr "موافق"
 
-#: addon\globalPlugins\DictionariesAlmaany\myDialog.py:91
+#. Translators: Label of Cancel button.
+#: addon\globalPlugins\contextualTranslator\myDialog.py:98
 msgid "cancel"
 msgstr "إلغاء"
 
-#: addon\globalPlugins\DictionariesAlmaany\myDialog.py:137
-msgid "Sorry, Service not available({})"
-msgstr "عُذرا, الخدمة غير متاحة({})"
+#: addon\globalPlugins\contextualTranslator\myDialog.py:144
+msgid "Sorry, An Error Happened({})"
+msgstr "عُذراً, لقد حصل خَطَأ({})"
 
 #. Add-on description
 #. Translators: Long description to be shown for this add-on on add-on information from add-ons manager
-#: buildVars.py:20
+#: buildVars.py:26
 msgid ""
-"\tThis addon helps get the meaning of single words from www.almaany.com "
-"website.\n"
-"\tPress nvda+windows+d, dictionaries almaany dialog will be displayed, and you "
-"will be standing on an edit field.\n"
-"\tIf when pressing this command, you were standing on a selected word, the "
-"word will be put in the edit field.\n"
-"\tOtherwise, enter in the edit field the word you want, tab an choose the "
-"dictionary you want and press enter.\n"
-"\tThe meaning of the word will be displayed in a separate browseable message "
-"box."
+"Retreaves translation of words or phrases in several Arabic-Foreign "
+"dictionaries.\n"
+"The default gesture for the addon is: Alt+ Shift+ C."
 msgstr ""
-"\tهذه الإضافة تساعدك على الحصول على معاني الكلمات, من خلال موقع www.almaany."
-"com.\n"
-"\tبالضغط على الإختصار nvda+windows+d, ستظهر لك محاورةْ قواميس المعاني, و ستكون "
-"واقفا على مربع تحرير.  \n"
-"\tو قَبلَ ضغط الإختصار, إذا كنت واقفا على كلمة محددة, هذه الكلمة ستظهر في مربع "
-"التحرير  \n"
-"\tأو اكتب في مربع التحرير الكلمة التي تريد, ثم إضغط تاب لتقف على قائمةْ "
-"القواميس إختر منها القاموس الذي تريد و اضغطْ عليه إنتر.  \n"
-"\tو بعد ذاك, سيظهر معنى الكلمة في browseable message box أو نافذة تستطيع "
-"قراءتها و التنقل فيها كما في المتصفح.  "
-
-#~ msgid "Browser window(like firefox or chrome)"
-#~ msgstr "نافذةْ المتصفح)مثل Firefox أو Chrome("
+"الحصول على معنى الكلمة أو العِبارة بواسطةْ عِدةْ قواميس سياقية عربية أجنبية."
+"\vالإختصار الإفتراضي للإضافة هو: Alt+Shift+C."
